--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
 							</archive>
 							<excludes>
 								<exclude>**/auto/</exclude>
+								<exclude>**/cmis/</exclude>
 							</excludes>
 						</configuration>
 					</plugin>
@@ -112,11 +113,6 @@
 					<scope>test</scope>
 				</dependency>
 				<dependency>
-					<groupId>net.sf.saxon</groupId>
-					<artifactId>saxon</artifactId>
-					<version>8.7</version>
-				</dependency>
-				<dependency>
 					<groupId>xalan</groupId>
 					<artifactId>xalan</artifactId>
 					<version>2.7.1</version>
@@ -126,10 +122,20 @@
 					<artifactId>commons-lang</artifactId>
 					<version>2.3</version>
 				</dependency>
+				<dependency>
+					<groupId>org.apache.chemistry.opencmis</groupId>
+					<artifactId>chemistry-opencmis-client-impl</artifactId>
+					<version>0.13.0</version>
+ 				</dependency>
+				<dependency>
+					<groupId>org.apache.chemistry.opencmis</groupId>
+					<artifactId>chemistry-opencmis-server-support</artifactId>
+					<version>0.13.0</version>
+				</dependency>
 			</dependencies>
 		</profile>
 	</profiles>
 
 
-	<version>1.0</version>
+	<version>1.0.1</version>
 </project>
