Ajout de la possibilite d'executer une tache du fichier job.config et correctif mineur

--- a/src/main/resources/job.config
+++ b/src/main/resources/job.config
@@ -1,5 +1,3 @@
-# Configuration des tests automatisés de contrôle de profils
-
 [accord-versement : ACCORD]
 	SAE_Serveur				= http://test
 	TransferIdPrefix   		= ACCORD_
@@ -10,4 +8,12 @@
 	ArchivalAgencyId	= ArchivalAgencyId
 	ArchivalAgencyName	= ArchivalAgencyName
 	ArchivalAgencyDesc 	= ArchivalAgencyDesc
+
+[generator : task1]
+	trace        	= RACINE/traces/bordereaux.log
+	accord   		= ACCORD
+	data    		= RACINE/metier/liste-fichiers.txt
+	rep_documents	= RACINE/documents
+	baseURI			= http://test
+	bordereau 		= RACINE/bordereaux/bordereau.xml
 	
