--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,13 @@
 				<dependency>
 					<groupId>xalan</groupId>
 					<artifactId>xalan</artifactId>
-					<version>2.7.1</version>
+					<version>2.7.2</version>
+				</dependency>
+				<!-- https://mvnrepository.com/artifact/xalan/serializer -->
+				<dependency>
+				    <groupId>xalan</groupId>
+				    <artifactId>serializer</artifactId>
+				    <version>2.7.2</version>
 				</dependency>
 				<dependency>
 					<groupId>commons-lang</groupId>
